# omni_vision

./: CMakeLists.txt  README.md  package.xml
config/: kodak_orbit360.yaml
launch/: kodak_orbit360.launch
src/: omni_rect.cpp
