<?xml version="1.0"?>
<package format="2">
  <name>omni_vision</name>
  <version>0.0.1</version>
  <description>Omnidirectional camera toolkit for ROS</description>

  <maintainer email="akorycki@ucsc.edu">Adam Korycki</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>cv_bridge</build_depend>

  <!-- Run-time dependencies -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend> 
  <exec_depend>image_transport</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <!-- Export dependencies -->
  <export>
    <build_type>catkin</build_type>
  </export>
</package>
